polish text on code section

--- a/_includes/open-source-codes.html
+++ b/_includes/open-source-codes.html
@@ -1,27 +1,28 @@
 
 <div class="open-source-codes" id="code">
-  <h1>Our Open-sourse codes</h1>
+  <h1>Open Code</h1>
 
-  <h4>Blockhain Library</h4>
+  Our code is unconditionally free. We invite all developers to reuse that code and build decentralized applications like our the <a hre="https://unstoppable.money" target ="_blank">Unstoppable Wallet</a> above.
+
+  <h4>Bitcoin SPV Toolkit</h4>
   <p>
-    Full SPV toolkit implementation for Bitcoin and Bitcoin Cash blockchains. These libraries enable any developer to
-    build true decentrazlied apps on top of Bitcoin and Bitcoin Cash blockchains.
+    Build decentralized applications on top of Bitcoin, Dash or Bitcoin Cash blockchains. This library does the hard work under the hood and enables any capable developer to create trully decentrazlied apps on top of Bitcoin or some of its supported forks.<br><br>If you're a developer we invite you to contribute.
   </p>
 
   <div class="sources">
     <div class="implementation">
-      <img alt="Swift" width="238"
+      <a href="https://github.com/horizontalsystems/bitcoin-kit-ios"><img alt="Swift" width="238"
            src="/assets/images/implementations/swift.png"
            srcset="
                /assets/images/implementations/swift@2x.png 2x,
-               /assets/images/implementations/swift@3x.png 3x" />
+               /assets/images/implementations/swift@3x.png 3x" /></a>
     </div>
     <div class="implementation">
-      <img alt="Kotlin" width="243"
+      <a href="https://github.com/horizontalsystems/bitcoin-kit-android"><img alt="Kotlin" width="243"
            src="/assets/images/implementations/kotlin.png"
            srcset="
                /assets/images/implementations/kotlin@2x.png 2x,
-               /assets/images/implementations/kotlin@3x.png 3x" />
+               /assets/images/implementations/kotlin@3x.png 3x" /></a>
     </div>
   </div>
 
