--- a/_includes/open-source-codes.html
+++ b/_includes/open-source-codes.html
@@ -2,7 +2,7 @@
 <div class="open-source-codes" id="code">
   <h1>Open Code</h1>
 
-  Our code is unconditionally free. We invite all developers to reuse that code and build decentralized applications like the <a href="https://unstoppable.money" target ="_blank">Unstoppable Wallet</a> above.<br><br>If you're a developer we invite you to contribute.
+  Our code is unconditionally free. We invite all developers to reuse that code and build decentralized applications like the <a href="https://unstoppable.money" target ="_blank">Unstoppable Wallet</a> above.<br><br>If you're a developer, we invite you to contribute.
 
   <h4>Bitcoin SPV Library</h4>
   <p>
