--- a/_includes/wallets-apps.html
+++ b/_includes/wallets-apps.html
@@ -1,5 +1,5 @@
 <div id="apps">
-  We happen to make great applications. The apps that look good, feel nice and engineered to enforce and guarantee your freedom.
+  We happen to make great applications that work for you.<br><br>They look good, feel nice and designed to bypass blocking and remain online indefinitely.
 </div>
 
 <div class="wallets-apps">
@@ -17,7 +17,7 @@
     </div>
 
     <div class="wallets-description">
-       Get unconditional protection for your crypto assets regardless of who you're or where you based. It is equally open to all, lives forever and engineered to protect your assets. <br><br>It can't be blocked, it can't be shut down, it doesn't ask you for anything.<br><br>It's fully under your control.
+       Get unconditional protection for your crypto assets regardless of who you're or where you based. <br><br>It can't be blocked, it can't be shut down, it doesn't ask you for anything.It's fully under your control.<br><br>It’s classy on the surface and unstoppable under the hood.
       <br>       
       <br>
       <br>
