add wallet site url

--- a/_includes/wallets-apps.html
+++ b/_includes/wallets-apps.html
@@ -20,8 +20,7 @@
        Get unconditional protection for your crypto assets regardless of who you're or where you based. <br><br>It can't be blocked, it can't be shut down, it doesn't ask you for any data. It's fully under your control. <br><br>It’s classy on the surface and unstoppable under the hood.
       <br>       
       <br>
-      <br>
-      <a href="https://unstoppable.money">visit site</a>
+      See more at <a href="https://unstoppable.money">https://unstoppable.money</a>
     </div>
 
     <div class="download-apps">
