--- a/_includes/open-source-codes.html
+++ b/_includes/open-source-codes.html
@@ -6,7 +6,7 @@
 
   <h4>Bitcoin SPV Library</h4>
   <p>
-    Build applications on top of Bitcoin, Dash or Bitcoin Cash blockchains. This library does the hard work under the hood and enables developers to create trully decentralized apps on top of Bitcoin or some of its supported forks.
+    Build applications on top of Bitcoin, Dash or Bitcoin Cash blockchains. This library does the hard work under the hood and enables developers to create truly decentralized apps on top of Bitcoin or some of its supported forks.
   </p>
 
   <div class="sources">
@@ -28,7 +28,7 @@
 
   <h4>Ethereum Light Client Library</h4>
   <p>
-    Build any purpose applications on top of Ethereum blockchain that work in a trully decentralized manner.<br><br> This library is still in active development phase ...
+    Build any purpose applications on top of Ethereum blockchain that work in a truly decentralized manner.<br><br> This library is still in active development ...
   </p>
 
   <div class="sources">
