--- a/_includes/wallets-apps.html
+++ b/_includes/wallets-apps.html
@@ -1,5 +1,5 @@
 <div id="apps">
-  We happen to make great applications that work for you.<br><br>These apps look good, feel nice, designed to bypass blocking and remain online indefinitely.
+  We make great applications that work for you.<br><br>These apps look good, feel nice, are designed to bypass blocking and remain online indefinitely.
 </div>
 
 <div class="wallets-apps">
@@ -17,7 +17,7 @@
     </div>
 
     <div class="wallets-description">
-       Get unconditional protection for your crypto assets regardless of who you're or where you based. <br><br>It can't be blocked, it can't be shut down, it doesn't ask you for any data. It's fully under your control. <br><br>It’s classy on the surface and unstoppable under the hood.
+       Get unconditional protection for your crypto assets regardless of who you're or where you based. <br><br>It can't be blocked, it can't be shut down, it doesn't ask you for any data. It's fully under your control. <br><br>It's classy on the surface and unstoppable under the hood.
       <br>       
       <br>
       See more at <a href="https://unstoppable.money">https://unstoppable.money</a>
