--- a/_includes/open-source-codes.html
+++ b/_includes/open-source-codes.html
@@ -2,11 +2,11 @@
 <div class="open-source-codes" id="code">
   <h1>Open Code</h1>
 
-  Our code is unconditionally free. We invite all blockchain developers to unconditionally reuse that code and build decentralized applications like the <a href="https://unstoppable.money" target ="_blank">Unstoppable Wallet</a> above.
+  Our code is unconditionally free. We invite blockchain developers to unconditionally reuse that code and build decentralized applications like the <a href="https://unstoppable.money" target ="_blank">Unstoppable Wallet</a>.
 
   <h4>Bitcoin SPV Library</h4>
   <p>
-    Build applications on top of Bitcoin, Dash or Bitcoin Cash blockchains. This library does the hard work under the hood and enables developers to create trully decentralized apps on top of Bitcoin or some of its supported forks.
+    Build applications on top of Bitcoin, Dash or Bitcoin Cash blockchains. This library does the hard work under the hood and enables engineers to create truly decentralized apps with ease.
   </p>
 
   <div class="sources">
@@ -28,7 +28,7 @@
 
   <h4>Ethereum Light Client Library</h4>
   <p>
-    Build any purpose applications on top of Ethereum blockchain that work in a trully decentralized manner.<br><br> This library is still in active development phase ...
+    Build any purpose apps on top of Ethereum blockchain that work in a truly decentralized manner.<br><br> This library is still in active development phase ...
   </p>
 
   <div class="sources">
