--- a/_includes/wallets-apps.html
+++ b/_includes/wallets-apps.html
@@ -1,5 +1,7 @@
 <div id="apps">
-  We happen to make great applications that work for you.<br><br>These apps look good, feel nice, designed to bypass blocking and remain online indefinitely.
+  Designed with care, coded by gifted engineers and built solely to serve your interests.
+  <br><br>They have a nice feel, genuinely borderless, and truly unconditional.
+
 </div>
 
 <div class="wallets-apps">
@@ -13,12 +15,12 @@
 
   <div class="wallets-info">
     <div class="wallets-title">
-    Unstoppable Wallet
+    Unstoppable
     </div>
 
     <div class="wallets-description">
-       Get unconditional protection for your crypto assets regardless of who you're or where you based. <br><br>It can't be blocked, it can't be shut down, it doesn't ask you for any data. It's fully under your control. <br><br>It’s classy on the surface and unstoppable under the hood.
-      <br>       
+       Invest in blockchains safely and privately. Get unconditional protection and control over your crypto investments. <br><br>This wallet can't be blocked, it can't be shut down, it doesn't ask for any data. <br><br>It gives you full control. There are none like it.
+      <br>
       <br>
       See more at <a href="https://unstoppable.money">https://unstoppable.money</a>
     </div>
