polish text further. less is more 3

--- a/_includes/wallets-apps.html
+++ b/_includes/wallets-apps.html
@@ -15,14 +15,14 @@
 
   <div class="wallets-info">
     <div class="wallets-title">
-    Unstoppable
+    Unstoppable Wallet
     </div>
 
     <div class="wallets-description">
-       Invest in blockchains safely and privately. Get unconditional protection and control over your crypto investments. <br><br>This wallet can't be blocked, it can't be shut down, it doesn't ask for any data. <br><br>It gives you full control. There are none like it.
+       Invest in blockchains safely and privately. Get unconditional protection and control over your crypto investments. <br><br>This crypto wallet can't be blocked, it can't be shut down, it doesn't ask for any data. <br><br>It gives you full control over your assets. There are none like it.
       <br>
       <br>
-      See more at <a href="https://unstoppable.money">https://unstoppable.money</a>
+      Get it @ <a href="https://unstoppable.money">https://unstoppable.money</a>
     </div>
 
     <div class="download-apps">
