polish text further. less is more 4

--- a/_includes/open-source-codes.html
+++ b/_includes/open-source-codes.html
@@ -2,11 +2,11 @@
 <div class="open-source-codes" id="code">
   <h1>Open Code</h1>
 
-  Our code is unconditionally free. We invite blockchain developers to unconditionally reuse that code and build decentralized applications like the <a href="https://unstoppable.money" target ="_blank">Unstoppable Wallet</a>.
+  <a href="https://github.com/horizontalsystems/" target ="_blank">Our code</a> is unconditionally free. We invite blockchain developers to unconditionally reuse that code and build decentralized apps like the <a href="https://unstoppable.money" target ="_blank">Unstoppable Wallet</a>.
 
   <h4>Bitcoin SPV Library</h4>
   <p>
-    Build applications on top of Bitcoin, Dash or Bitcoin Cash blockchains. This library does the hard work under the hood and enables engineers to create truly decentralized apps with ease.
+    Build on top of Bitcoin, Dash or Bitcoin Cash blockchains. This library does the hard work under the hood and enables engineers to create truly decentralized apps with ease.
   </p>
 
   <div class="sources">
@@ -28,7 +28,7 @@
 
   <h4>Ethereum Light Client Library</h4>
   <p>
-    Build any purpose apps on top of Ethereum blockchain that work in a truly decentralized manner.<br><br> This library is still in active development phase ...
+    Build any purpose apps on top of Ethereum blockchain that work in a decentralized manner.<br><br> This library is still in active development phase ...
   </p>
 
   <div class="sources">
