--- a/_includes/wallets-apps.html
+++ b/_includes/wallets-apps.html
@@ -1,6 +1,5 @@
 <div id="apps">
-  Designed with care, coded by gifted engineers and built solely to serve your interests.
-  <br><br>They have a nice feel, genuinely borderless, and truly unconditional.
+  Designed to detail, crafted by gifted engineers, operate in a borderless manner and built solely to serve your interests.
 
 </div>
 
