change wallet description

--- a/_includes/wallets-apps.html
+++ b/_includes/wallets-apps.html
@@ -1,5 +1,5 @@
 <div id="apps">
-  Designed to detail, crafted by gifted engineers, operate in a borderless manner and built solely to serve your interests.
+  Designed to detail, crafted by gifted engineers and built solely to uphold your interests.
 
 </div>
 
@@ -18,7 +18,7 @@
     </div>
 
     <div class="wallets-description">
-       Invest in blockchains safely and privately. Get unconditional protection and control over your crypto investments. <br><br>This crypto wallet can't be blocked, it can't be shut down, it doesn't ask for any data. <br><br>It gives you full control over your assets. There are none like it.
+       Invest in crypto safely and privately. Get unconditional control over YOUR assets. <br><br>Discover Bitcoin, Ethereum, EOS and other respectful projects built on top of blockchains.<br><br>It gives you full control. It doesn't ask for any data.
       <br>
       <br>
       Get it @ <a href="https://unstoppable.money">https://unstoppable.money</a>
