--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,9 @@
 
         {% include wallets-apps.html %}
 
-        <hr>
+<!--         <hr>
 
-        {% include open-source-codes.html %}
+        {% include open-source-codes.html %} -->
 
       </div>
     </main>
