--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,5 @@
 <footer>
   <div class="container">
-    <hr />
-    <div><a href="http://horizontalsystems.io">Horizontal Systems</a></div>
+    {% include nav.html %}
   </div>
 </footer>
