--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,8 +20,8 @@
           </div>
 
           <div class="section-description">
-            Horizontal Systems build serverless applications around the idea of private wealth and privacy. Your door to
-            Bitcoin, Ethereum, all other crypto assets.
+            Horizontal Systems builds serverless applications around the idea of private wealth and privacy. Invest in
+            Bitcoin, Ethereum and other crypto assets.
           </div>
         </div>
       </div>
