--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,14 +23,14 @@
             <div class="section-left">
               <div class="image-review gallery-item"></div>
               <div class="gallery-title" id="open-gallery">
-                <span>Photo Gallery</span>
+                <span>Gallery</span>
               </div>
             </div>
 
             <div class="section-right">
               <div class="video-review gallery-item"></div>
               <a class="gallery-title" href="https://www.youtube.com/watch?v=-qjzSUdeId0" data-fancybox="video">
-                <img src="/assets/images/gallery/play.png" alt="Play Video"> <span>Our Team</span>
+                <img src="/assets/images/gallery/play.png" alt="Play Video"> <span>Play Office</span>
               </a>
             </div>
           </div>
@@ -42,7 +42,7 @@
           <div class="section">
             <div class="section-left">
               <div class="section-title">
-                Product
+                Products
               </div>
 
               <div class="section-info">
@@ -51,10 +51,9 @@
                 </div>
 
                 <div class="section-description">
-                  Invest in Bitcoin, Ethereum, EOS, Dash, Bitcoin Cash, Binance DEX and 60+ blockchain based
-                  projects.<br><br>
-                  Store cryptocurrency safely and privately. Get full and exclusive control over your assets. <br><br>
-                  Designed to detail and built by gifted engineers. <br><br>
+                  Have exclusive control over what's yours. Store cryptocurrency safely and privately.<br><br>
+                  Invest in Bitcoin, Ethereum, EOS, Dash, Bitcoin Cash, Binance DEX and 60+ blockchain projects.<br><br>
+                  Non-custodial, decentralized, p2p, private, blockchain wallet.<br><br>
                   Get it @ <a href="#">https://unstoppable.money</a>
                 </div>
               </div>
@@ -76,20 +75,21 @@
           <div class="section">
             <div class="section-left">
               <div class="section-title">
-                Guide
+                Guides
               </div>
 
               <div class="section-info">
                 <div class="section-subtitle">
-                  Bitcoin Explained In Simple Terms
+                  Crypto in Simple Terms
                 </div>
 
                 <div class="section-description">
-                  Invest in crypto safely and privately. Get unconditional control over YOUR assets. <br><br>
-                  Discover Bitcoin, Ethereum, EOS, and other respectful projects built on top of blockchain
-                  technology.<br><br>
-                  It gives you full control. It doesn’t ask for any data. <br><br>
-                  Get it @ <a href="#">https://bitcoin101</a>
+                  <br><br>
+                  Understand how Bitcoin, Ethereum, EOS, Libra, Binance DEX, Telegram Open Network and other blokchains work. 
+                  <br><br>
+                  We explain these projects in simple terms helping you onboard these new decentralized economoies as a pioneer.<br><br>
+
+                  @ <a href="#">/guides.md</a>
                 </div>
               </div>
             </div>
