--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <div class="nav">
   <div class="nav-item"><a href="https://unstoppable.money">Home</a></div>
-  <div class="nav-item">HowTo</div>
   <div class="nav-item">Contact</div>
   <div class="nav-item"><a href="https://github.com/horizontalsystems" target="_blank">GitHub</a></div>
+  <div class="nav-item"><a href="/privacy.md" target="_blank">Privacy</a></div>  
 </div>
